--- a/index.html
+++ b/index.html
@@ -388,15 +388,66 @@
         </div>
         <div class="row" style="text-align: center;">
             <div class="row">
+                <div class="col-sm-2 col-md-2 col-sm-offset-2">
+                    <a data-toggle="modal" href="mentor/ron-conway"><img src="images/photo_ron_conway.jpg" width="100%"
+                                                                         class="img-responsive"/>
+
+                        <p>Ron Conway</a></p>
+                </div>
+                <div class="col-sm-2 col-md-2">
+                    <a data-toggle="modal" href="mentor/david-lee"><img src="images/photo_david_lee.jpg" width="100%"
+                                                                        class="img-responsive"/>
+
+                        <p>David Lee</a></p>
+                </div>
+
+                <div class="col-md-2 col-sm-2">
+                    <a data-toggle="modal" href="mentor/ron-bouganim"><img src="images/photo_ron_bouganim.jpg   " width="100%"
+                                                                           class="img-responsive"/>
+
+                        <p>Ron Bouganim</a></p>
+                </div>
+                <div class="col-sm-2">
+                    <a data-toggle="modal" href="mentor/john-paul-farmer"><img src="images/photo_john_farmer.jpg" width="100%"
+                                                                               class="img-responsive"/>
+
+                        <p>John Farmer</a></p>
+                </div>
+
+            </div>
+            <div class="row">
                 <div class="col-sm-2 col-sm-offset-2">
+                    <a data-toggle="modal" href="mentor/lenny-mendonca"><img src="images/photo_lenny_mendonca.jpg" width="100%"
+                                                                             class="img-responsive"/>
+
+                        <p>Lenny Mendonca</a></p>
+                </div>
+
+                <div class="col-md-2 col-sm-2">
+                    <a data-toggle="modal" href="mentor/dave-viotti"><img src="images/photo_dave_viotti.jpg" width="100%"
+                                                                          class="img-responsive"/>
+
+                        <p>Dave Viotti</a></p>
+                </div>
+
+                <div class="col-md-2 col-sm-2">
+                    <a data-toggle="modal" href="mentor/cory-smith"><img src="images/photo_cory_smith.jpg" width="100%"
+                                                                          class="img-responsive"/>
+
+                        <p>Cory Smith</a></p>
+                </div>
+                <div class="col-sm-2 col-md-2">
                     <a data-toggle="modal" href="mentor/jay-nath"><img src="images/photo_jay_nath.jpg" width="100%"
-                                                                  class="img-responsive"/>
+                                                                       class="img-responsive"/>
 
                         <p>Jay Nath</a></p>
                 </div>
+            </div>
+            <div class="row">
 
 
-                <div class="col-sm-2">
+
+                <div class="col-sm-2 col-md-2 col-sm-offset-2">
                     <a data-toggle="modal" href="mentor/rahul-mewawalla"><img src="images/photo_rahul_mewawalla.jpg" width="100%"
                                                                     class="img-responsive"/>
 
@@ -415,32 +466,6 @@
                                                                       class="img-responsive"/>
 
                         <p>Rebecca Foster</a></p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-2 col-sm-offset-2">
-                    <a data-toggle="modal" href="mentor/lenny-mendonca"><img src="images/photo_lenny_mendonca.jpg" width="100%"
-                                                                    class="img-responsive"/>
-
-                        <p>Lenny Mendonca</a></p>
-                </div>
-                <div class="col-sm-2">
-                    <a data-toggle="modal" href="mentor/john-paul-farmer"><img src="images/photo_john_farmer.jpg" width="100%"
-                                                                   class="img-responsive"/>
-
-                        <p>John Farmer</a></p>
-                </div>
-                <div class="col-md-2 col-sm-2">
-                    <a data-toggle="modal" href="mentor/dave-viotti"><img src="images/photo_dave_viotti.jpg" width="100%"
-                                                                   class="img-responsive"/>
-
-                        <p>Dave Viotti</a></p>
-                </div>
-                <div class="col-md-2 col-sm-2">
-                    <a data-toggle="modal" href="mentor/ron-bouganim"><img src="images/photo_ron_bouganim.jpg   " width="100%"
-                                                                          class="img-responsive"/>
-
-                        <p>Ron Bouganim</a></p>
                 </div>
             </div>
         </div>
