update text and mentors

--- a/index.html
+++ b/index.html
@@ -352,9 +352,8 @@
                 <p>Selection will be made by SF EIR selection group composed of public and private sector leaders with
                     innovation, Fortune 500, startup and venture capital experience.</p>
 
-                <p>We will be reviewing applications on a rolling basis. It is in the applicant's best interest to apply
-                    early. We will announce selected teams in early October, with the program beginning in mid-October
-                    and wrapping up in mid-February.</p>
+                <p>We will announce selected teams in October, with the program beginning in October
+                    and wrapping up in February.</p>
                 <p style="text-align: center; font-weight: bold;">Deadline is Midnight Pacific, October 6, 2013</p>
 
                 <div class="Apply" style="text-align: center; margin: 0 auto">
@@ -382,45 +381,17 @@
                     civic innovation space with San Francisco agencies and departments as your key focus group and
                     customers
                     over
-                    the four month program. Below are just a handful of currently committed mentors.
+                    the four month program.
                 </p>
             </div>
         </div>
         <div class="row" style="text-align: center;">
             <div class="row">
-                <div class="col-sm-2 col-md-2 col-sm-offset-2">
-                    <a data-toggle="modal" href="mentor/ron-conway"><img src="images/photo_ron_conway.jpg" width="100%"
+                <div class="col-md-2 col-sm-2 col-sm-offset-2">
+                    <a data-toggle="modal" href="mentor/cory-smith"><img src="images/photo_cory_smith.jpg" width="100%"
                                                                          class="img-responsive"/>
 
-                        <p>Ron Conway</a></p>
-                </div>
-                <div class="col-sm-2 col-md-2">
-                    <a data-toggle="modal" href="mentor/david-lee"><img src="images/photo_david_lee.jpg" width="100%"
-                                                                        class="img-responsive"/>
-
-                        <p>David Lee</a></p>
-                </div>
-
-                <div class="col-md-2 col-sm-2">
-                    <a data-toggle="modal" href="mentor/ron-bouganim"><img src="images/photo_ron_bouganim.jpg   " width="100%"
-                                                                           class="img-responsive"/>
-
-                        <p>Ron Bouganim</a></p>
-                </div>
-                <div class="col-sm-2">
-                    <a data-toggle="modal" href="mentor/john-paul-farmer"><img src="images/photo_john_farmer.jpg" width="100%"
-                                                                               class="img-responsive"/>
-
-                        <p>John Farmer</a></p>
-                </div>
-
-            </div>
-            <div class="row">
-                <div class="col-sm-2 col-sm-offset-2">
-                    <a data-toggle="modal" href="mentor/lenny-mendonca"><img src="images/photo_lenny_mendonca.jpg" width="100%"
-                                                                             class="img-responsive"/>
-
-                        <p>Lenny Mendonca</a></p>
+                        <p>Cory Smith</a></p>
                 </div>
 
                 <div class="col-md-2 col-sm-2">
@@ -430,28 +401,61 @@
                         <p>Dave Viotti</a></p>
                 </div>
 
-                <div class="col-md-2 col-sm-2">
-                    <a data-toggle="modal" href="mentor/cory-smith"><img src="images/photo_cory_smith.jpg" width="100%"
-                                                                          class="img-responsive"/>
+                <div class="col-sm-2 col-md-2">
+                    <a data-toggle="modal" href="mentor/david-lee"><img src="images/photo_david_lee.jpg" width="100%"
+                                                                        class="img-responsive"/>
 
-                        <p>Cory Smith</a></p>
+                        <p>David Lee</a></p>
                 </div>
+
                 <div class="col-sm-2 col-md-2">
                     <a data-toggle="modal" href="mentor/jay-nath"><img src="images/photo_jay_nath.jpg" width="100%"
                                                                        class="img-responsive"/>
 
                         <p>Jay Nath</a></p>
                 </div>
+
             </div>
             <div class="row">
 
+                <div class="col-sm-2 col-sm-offset-2">
+                    <a data-toggle="modal" href="mentor/john-paul-farmer"><img src="images/photo_john_farmer.jpg" width="100%"
+                                                                               class="img-responsive"/>
 
+                        <p>John Farmer</a></p>
+                </div>
+                <div class="col-sm-2">
+                    <a data-toggle="modal" href="mentor/lenny-mendonca"><img src="images/photo_lenny_mendonca.jpg" width="100%"
+                                                                             class="img-responsive"/>
 
-                <div class="col-sm-2 col-md-2 col-sm-offset-2">
+                        <p>Lenny Mendonca</a></p>
+                </div>
+                <div class="col-sm-2 col-md-2">
                     <a data-toggle="modal" href="mentor/rahul-mewawalla"><img src="images/photo_rahul_mewawalla.jpg" width="100%"
-                                                                    class="img-responsive"/>
+                                                                              class="img-responsive"/>
 
                         <p>Rahul Mewawalla</a></p>
+                </div>
+
+                <div class="col-sm-2">
+                    <a data-toggle="modal" href="mentor/rebecca-foster"><img src="images/photo_rebecca_foster.jpg" width="100%"
+                                                                             class="img-responsive"/>
+
+                        <p>Rebecca Foster</a></p>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-md-2 col-sm-2 col-sm-offset-2">
+                    <a data-toggle="modal" href="mentor/ron-bouganim"><img src="images/photo_ron_bouganim.jpg   " width="100%"
+                                                                           class="img-responsive"/>
+
+                        <p>Ron Bouganim</a></p>
+                </div>
+                <div class="col-sm-2 col-md-2">
+                    <a data-toggle="modal" href="mentor/ron-conway"><img src="images/photo_ron_conway.jpg" width="100%"
+                                                                         class="img-responsive"/>
+                        <p>Ron Conway</a></p>
                 </div>
 
                 <div class="col-md-2 col-sm-2">
@@ -459,13 +463,6 @@
                                                                       width="100%" class="img-responsive"/>
 
                         <p>Shannon Spanhake</a></p>
-                </div>
-
-                <div class="col-sm-2">
-                    <a data-toggle="modal" href="mentor/rebecca-foster"><img src="images/photo_rebecca_foster.jpg" width="100%"
-                                                                      class="img-responsive"/>
-
-                        <p>Rebecca Foster</a></p>
                 </div>
             </div>
         </div>
@@ -485,10 +482,6 @@
                         below</a> or
                     <a
                             href="http://twitter.com/sfmoci">@sfmoci</a>), and we'll get back to you shortly.</p>
-
-                <h2>How does the EIR program relate to other civic programs like Code for America's Civic Accelerator?</h2>
-
-                <p>The SF EIR program is part of a growing ecosystem of civic innovation.  Inspired by <a href="http://www.codeforamerica.org/accelerator/">Code for America’s Civic Accelerator</a>, and joined by <a href="http://www.pointsoflight.org/civic-incubator/civic-accelerator">Points of Light</a> and <a href="http://tumml.org/">Tumml</a> among others, the EIR program seeks to offer another pathway to addressing civic challenges.  This is not an accelerator or incubator program, but rather a method for the City and County of San Francisco to formally match entrepreneurs working on products that serve or could serve government to various city agencies and departments.  It is our belief that creating a formal pathway can help these entrepreneurs more easily navigate the complexity of working in the public sector and bring better fit solutions to the challenges of government.  We applaud CfA's pioneering work in this space and hope our program spurs more entrepreneurs to work on civic problems.</p>
 
                 <h2>Why is the program unique?</h2>
 
@@ -516,6 +509,10 @@
 
                 <h2>What do you mean when you say the product or service has to be self-sustaining?</h2>
                 <p>We want you to develop a successful product or service that is valuable to government here in San Francisco and across other cities, states and at the federal level. We expect you to ramp up your business through competitive and compelling offerings that governments consider purchasing because it has a measurable impact such as increased revenue, lower costs or enhanced productivity. </p>
+
+                <h2>How does the EIR program relate to other civic programs like Code for America's Civic Accelerator?</h2>
+                <p>The SF EIR program is part of a growing ecosystem of civic innovation.  Inspired by <a href="http://www.codeforamerica.org/accelerator/">Code for America’s Civic Accelerator</a>, and joined by <a href="http://www.pointsoflight.org/civic-incubator/civic-accelerator">Points of Light</a> and <a href="http://tumml.org/">Tumml</a> among others, the EIR program seeks to offer another pathway to addressing civic challenges.  This is not an accelerator or incubator program, but rather a method for the City and County of San Francisco to formally match entrepreneurs working on products that serve or could serve government to various city agencies and departments.  It is our belief that creating a formal pathway can help these entrepreneurs more easily navigate the complexity of working in the public sector and bring better fit solutions to the challenges of government.  We applaud CfA's pioneering work in this space and hope our program spurs more entrepreneurs to work on civic problems.</p>
+
             </div>
             <div class="divider"></div>
         </div>
