--- a/index.html
+++ b/index.html
@@ -394,12 +394,6 @@
                         <p>Cory Smith</a></p>
                 </div>
 
-                <div class="col-md-2 col-sm-2">
-                    <a data-toggle="modal" href="mentor/dave-viotti"><img src="images/photo_dave_viotti.jpg" width="100%"
-                                                                          class="img-responsive"/>
-
-                        <p>Dave Viotti</a></p>
-                </div>
 
                 <div class="col-sm-2 col-md-2">
                     <a data-toggle="modal" href="mentor/david-lee"><img src="images/photo_david_lee.jpg" width="100%"
@@ -414,39 +408,30 @@
 
                         <p>Jay Nath</a></p>
                 </div>
-
-            </div>
-            <div class="row">
-
-                <div class="col-sm-2 col-sm-offset-2">
+                <div class="col-sm-2">
                     <a data-toggle="modal" href="mentor/john-paul-farmer"><img src="images/photo_john_farmer.jpg" width="100%"
                                                                                class="img-responsive"/>
 
                         <p>John Farmer</a></p>
                 </div>
-                <div class="col-sm-2">
+
+
+            </div>
+            <div class="row">
+                <div class="col-sm-2 col-md-2 col-sm-offset-2">
                     <a data-toggle="modal" href="mentor/lenny-mendonca"><img src="images/photo_lenny_mendonca.jpg" width="100%"
                                                                              class="img-responsive"/>
 
                         <p>Lenny Mendonca</a></p>
                 </div>
+
                 <div class="col-sm-2 col-md-2">
                     <a data-toggle="modal" href="mentor/rahul-mewawalla"><img src="images/photo_rahul_mewawalla.jpg" width="100%"
                                                                               class="img-responsive"/>
 
                         <p>Rahul Mewawalla</a></p>
                 </div>
-
-                <div class="col-sm-2">
-                    <a data-toggle="modal" href="mentor/rebecca-foster"><img src="images/photo_rebecca_foster.jpg" width="100%"
-                                                                             class="img-responsive"/>
-
-                        <p>Rebecca Foster</a></p>
-                </div>
-
-            </div>
-            <div class="row">
-                <div class="col-md-2 col-sm-2 col-sm-offset-2">
+                <div class="col-md-2 col-sm-2">
                     <a data-toggle="modal" href="mentor/ron-bouganim"><img src="images/photo_ron_bouganim.jpg   " width="100%"
                                                                            class="img-responsive"/>
 
@@ -458,12 +443,6 @@
                         <p>Ron Conway</a></p>
                 </div>
 
-                <div class="col-md-2 col-sm-2">
-                    <a data-toggle="modal" href="mentor/shannon-spanhake"><img src="images/photo_shannon_spanhake.jpg"
-                                                                      width="100%" class="img-responsive"/>
-
-                        <p>Shannon Spanhake</a></p>
-                </div>
             </div>
         </div>
         <div class="divider"></div>
