--- a/index.html
+++ b/index.html
@@ -424,6 +424,12 @@
 
                         <p>Lenny Mendonca</a></p>
                 </div>
+                <div class="col-sm-2 col-md-2">
+                    <a data-toggle="modal" href="mentor/monique-woodard"><img src="images/photo_monique_woodard.jpg" width="100%"
+                                                                              class="img-responsive"/>
+
+                        <p>Monique Woodard</a></p>
+                </div>
 
                 <div class="col-sm-2 col-md-2">
                     <a data-toggle="modal" href="mentor/rahul-mewawalla"><img src="images/photo_rahul_mewawalla.jpg" width="100%"
@@ -431,7 +437,15 @@
 
                         <p>Rahul Mewawalla</a></p>
                 </div>
-                <div class="col-md-2 col-sm-2">
+                <div class="col-sm-2 col-md-2">
+                    <a data-toggle="modal" href="mentor/rebecca-foster"><img src="images/photo_rebecca_foster.jpg" width="100%"
+                                                                              class="img-responsive"/>
+
+                        <p>Rebecca Foster</a></p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-2 col-sm-2 col-sm-offset-2">
                     <a data-toggle="modal" href="mentor/ron-bouganim"><img src="images/photo_ron_bouganim.jpg   " width="100%"
                                                                            class="img-responsive"/>
 
@@ -443,6 +457,13 @@
                         <p>Ron Conway</a></p>
                 </div>
 
+                <div class="col-md-2 col-sm-2">
+                    <a data-toggle="modal" href="mentor/shannon-spanhake"><img src="images/photo_shannon_spanhake.jpg" width="100%"
+                                                                         class="img-responsive"/>
+
+                        <p>Shannon Spanahke</a></p>
+                </div>
+                </div>
             </div>
         </div>
         <div class="divider"></div>
