add Kiran to mentors

--- a/index.html
+++ b/index.html
@@ -419,6 +419,12 @@
             </div>
             <div class="row">
                 <div class="col-sm-2 col-md-2 col-sm-offset-2">
+                    <a data-toggle="modal" href="mentor/kiran-jain"><img src="images/photo_kiran_jain.jpg" width="100%"
+                                                                             class="img-responsive"/>
+
+                        <p>Kiran Jain</a></p>
+                </div>
+                <div class="col-sm-2 col-md-2">
                     <a data-toggle="modal" href="mentor/lenny-mendonca"><img src="images/photo_lenny_mendonca.jpg" width="100%"
                                                                              class="img-responsive"/>
 
@@ -437,15 +443,15 @@
 
                         <p>Rahul Mewawalla</a></p>
                 </div>
-                <div class="col-sm-2 col-md-2">
+            </div>
+            <div class="row">
+                <div class="col-sm-2 col-md-2 col-sm-offset-2">
                     <a data-toggle="modal" href="mentor/rebecca-foster"><img src="images/photo_rebecca_foster.jpg" width="100%"
-                                                                              class="img-responsive"/>
+                                                                             class="img-responsive"/>
 
                         <p>Rebecca Foster</a></p>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-2 col-sm-2 col-sm-offset-2">
+                <div class="col-md-2 col-sm-2">
                     <a data-toggle="modal" href="mentor/ron-bouganim"><img src="images/photo_ron_bouganim.jpg   " width="100%"
                                                                            class="img-responsive"/>
 
