--- a/index.html
+++ b/index.html
@@ -393,7 +393,13 @@
         </div>
         <div class="row" style="text-align: center;">
             <div class="row">
-                <div class="col-md-2 col-sm-2 col-sm-offset-2">
+                <div class="col-md-2 col-sm-2 col-sm-offset-1">
+                    <a data-toggle="modal" href="mentor/alissa-black"><img src="images/photo_alissa_black.jpg" width="100%"
+                                                                         class="img-responsive"/>
+
+                        <p>Alissa Black</a></p>
+                </div>
+                <div class="col-md-2 col-sm-2">
                     <a data-toggle="modal" href="mentor/cory-smith"><img src="images/photo_cory_smith.jpg" width="100%"
                                                                          class="img-responsive"/>
 
@@ -425,7 +431,7 @@
 
             </div>
             <div class="row">
-                <div class="col-sm-2 col-md-2 col-sm-offset-2">
+                <div class="col-sm-2 col-md-2 col-sm-offset-1">
                     <a data-toggle="modal" href="mentor/kiran-jain"><img src="images/photo_kiran_jain.jpg" width="100%"
                                                                          class="img-responsive"/>
 
@@ -453,16 +459,17 @@
 
                         <p>Rahul Mewawalla</a></p>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-2 col-md-2 col-sm-offset-2">
+                <div class="col-sm-2 col-md-2">
                     <a data-toggle="modal" href="mentor/rebecca-foster"><img src="images/photo_rebecca_foster.jpg"
                                                                              width="100%"
                                                                              class="img-responsive"/>
 
                         <p>Rebecca Foster</a></p>
                 </div>
-                <div class="col-md-2 col-sm-2">
+            </div>
+            <div class="row">
+
+                <div class="col-md-2 col-sm-2 col-sm-offset-3">
                     <a data-toggle="modal" href="mentor/ron-bouganim"><img src="images/photo_ron_bouganim.jpg   "
                                                                            width="100%"
                                                                            class="img-responsive"/>
