fix image source

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <div class="header">
     <div class="container" id="apply">
         <div class="brand-outer-wrapper">
-            <a href="http://innovatesf.com" target="_blank"><img src="/images/city_seal_white.png" width="65px;"
+            <a href="http://innovatesf.com" target="_blank"><img src="images/city_seal_white.png" width="65px;"
                                                                  style="float:left;"></a>
 
             <div class="brand-wrapper">
