--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     An initiative of
                 </div>
                 <a href="http://innovatesf.com" target="_blank"><h1 class="office-brand">The Mayor's Office of Civic
-                    Innovation</h1></a>
+                    Innovation</h1><h2 class="office-of-mayor-sub">Office of Mayor Edwin M. Lee</h2></a>
             </div>
         </div>
 
@@ -131,25 +131,31 @@
 <div class="section" id="overview">
     <div class="container">
         <h1>Introducing the 2014 Cohort</h1>
-
         <div id="cohort-logos" class="row">
+            <p style="max-width: 65%; margin: 0 auto">The SF EIR program is a voluntary, sixteen-week collaboration to bring together the private sector and City departments to explore innovative solutions to civic challenges that can lower costs, increase revenue, and enhance productivity. 6 startups have been selected for the first cohort. Read more below.</p>
             <div class="col-md-4">
                <img src="images/birdi.png" class=""/>
+                <p>Birdi (getbirdi.com) will work with the San Francisco Department of Public Health on air quality and health issues. Birdi is a smart device startup whose smart air monitor is more than a smoke detector. It tracks emergencies like fire and elevated carbon monoxide levels as well as health dangers around air quality, providing recommendations to improve individual and neighborhood health and safety.</p>
             </div>
             <div class="col-md-4">
                 <img src="images/buildingeye.png" class=""/>
+                <p>Buildingeye (buildingeye.com) will work with the San Francisco Municipal Transportation Agency to engage residents and communities. BuildingEye is a software startup that makes permit and noticing information easier to discover through a mapping interface.</p>
             </div>
             <div class="col-md-4">
                 <img src="images/indoors_logo.png" class=""/>
+                <p>Indoo.rs (indoo.rs) will work with the San Francisco International Airport on enhanced navigation and location-based services.  Indoo.rs is an Internet of Things startup that provides location-based services, indoor navigation and advanced sensors.</p>
             </div>
             <div class="col-md-4">
                 <img src="images/mpdLogo.png" class=""/>
+                <p>MobilePD (gomobilepd.com) will work with the San Francisco Police Department on public safety and civic engagement. MobilePD is a mobile technology startup that enhances social engagement with the community to reduce crime.</p>
             </div>
             <div class="col-md-4">
-                <img src="images/regroup.jpeg" class=""/>
+                <img src="images/regroup.png" class=""/>
+                <p>Regroup (regroup.com) will work with the San Francisco Department of Emergency Management on enhanced communication services so that the City is better prepared. ReGroup is a software startup that provides multi-channel emergency notifications.</p>
             </div>
             <div class="col-md-4">
-                <img src="images/synthicity.jpeg" class=""/>
+                <img src="images/synthicity.png" class=""/>
+                <p>Synthicity (synthicity.com) will work with the San Francisco Planning Department on new simulation, planning and urban development tools and technologies. Synthicity is a software startup that builds simulation tools and solutions for urban development and planning.</p>
             </div>
         </div>
         <!-- /row -->
