--- a/index.html
+++ b/index.html
@@ -135,27 +135,27 @@
             <p style="max-width: 65%; margin: 0 auto">The SF EIR program is a voluntary, sixteen-week collaboration to bring together the private sector and City departments to explore innovative solutions to civic challenges that can lower costs, increase revenue, and enhance productivity. 6 startups have been selected for the first cohort. Read more below.</p>
             <div class="col-md-4">
                <a href="http://getbirdi.com" target="_blank" alt="Link to Birdi's website"><img src="images/birdi.png" class=""/></a>
-                <p>Birdi (getbirdi.com) will work with the San Francisco Department of Public Health on air quality and health issues. Birdi is a smart device startup whose smart air monitor is more than a smoke detector. It tracks emergencies like fire and elevated carbon monoxide levels as well as air quality, providing recommendations to improve individual and neighborhood health and safety.</p>
+                <p>Birdi will work with the San Francisco Department of Public Health on air quality and health issues. Birdi is a smart device startup whose smart air monitor is more than a smoke detector. It tracks emergencies like fire and elevated carbon monoxide levels as well as air quality, providing recommendations to improve individual and neighborhood health and safety.</p>
             </div>
             <div class="col-md-4">
                 <a href="http://buildingeye.com" target="_blank" alt="Link to Buildingeye's website"><img src="images/buildingeye.png" class=""/></a>
-                <p>Buildingeye (buildingeye.com) will work with the San Francisco Municipal Transportation Agency to engage residents and communities. BuildingEye is a software startup that makes permit and noticing information easier to discover through a mapping interface.</p>
+                <p>Buildingeye will work with the San Francisco Municipal Transportation Agency to engage residents and communities. BuildingEye is a software startup that makes permit and noticing information easier to discover through a mapping interface.</p>
             </div>
             <div class="col-md-4">
                 <a href="http://indoo.rs" target="_blank" alt="Link to Indoo.rs website"><img src="images/indoors_logo.png" class=""/></a>
-                <p>Indoo.rs (indoo.rs) will work with the San Francisco International Airport on enhanced navigation and location-based services.  Indoo.rs is an Internet of Things startup that provides location-based services, indoor navigation and advanced sensors.</p>
+                <p>Indoo.rs will work with the San Francisco International Airport on enhanced navigation and location-based services.  Indoo.rs is an Internet of Things startup that provides location-based services, indoor navigation and advanced sensors.</p>
             </div>
             <div class="col-md-4">
                 <a href="http://gomobilepd.com" alt="Link to MobilePD's website" target="_blank"><img src="images/mpdLogo.png" class=""/></a>
-                <p>MobilePD (gomobilepd.com) will work with the San Francisco Police Department on public safety and civic engagement. MobilePD is a mobile technology startup that enhances social engagement with the community to reduce crime.</p>
+                <p>MobilePD will work with the San Francisco Police Department on public safety and civic engagement. MobilePD is a mobile technology startup that enhances social engagement with the community to reduce crime.</p>
             </div>
             <div class="col-md-4">
                 <a href="http://regroup.com" target="_blank" alt="Link to Regroup"><img src="images/regroup.png" class=""/></a>
-                <p>Regroup (regroup.com) will work with the San Francisco Department of Emergency Management on enhanced communication services so that the City is better prepared. ReGroup is a software startup that provides multi-channel emergency notifications.</p>
+                <p>Regroup will work with the San Francisco Department of Emergency Management on enhanced communication services so that the City is better prepared. ReGroup is a software startup that provides multi-channel emergency notifications.</p>
             </div>
             <div class="col-md-4">
                 <a href="http://synthicity.com" target="_blank" alt="Link to Synthicity"><img src="images/synthicity.png" class=""/></a>
-                <p>Synthicity (synthicity.com) will work with the San Francisco Planning Department on new simulation, planning and urban development tools and technologies. Synthicity is a software startup that builds simulation tools and solutions for urban development and planning.</p>
+                <p>Synthicity will work with the San Francisco Planning Department on new simulation, planning and urban development tools and technologies. Synthicity is a software startup that builds simulation tools and solutions for urban development and planning.</p>
             </div>
         </div>
         <!-- /row -->
